# belief_spread

./: Cargo.toml  README.md
src/: agent.rs  behaviour.rs  belief.rs  errors.rs  lib.rs  named.rs  uuidd.rs
