[package]
name = "belief-spread"
version = "0.8.0"
authors = ["Robert Greener"]
edition = "2021"
license = "BSD-3-Clause"
description = "A rust library for modelling belief spread"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0.65"
float-cmp = "0.9.0"
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Deserialization support
]